objects/vlocity_ins__ProductionCode__c.object
<CustomObject>
    <description>A code given to a producer or agency/brokerage out of the appointment process under which they are authorized to quote and sell insurance or financial services. The producer will use the code on every quote to define the parties that should receive credit for the sale. Each code defines the party who will be paid the commission as well as the parent code that will receive aggregate credit. Logical child of either a Producer (ProducerId__c) or an Agency/Brokerage (AgencyBrokerageId__c) or neither.</description>
    <fields>
        <fullName>vlocity_ins__AgencyBrokerageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agency, brokerage or company that is granted this code.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Production Codes</relationshipLabel>
        <relationshipName>ProductionCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the producer contract which grants this code. Multiple codes can be granted by a single contract.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Production Codes</relationshipLabel>
        <relationshipName>Production_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsWritingCode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this code can be used for the writing agent (end level credit) or if it is simply used as roll up credit in the hiearchy.</description>
        <label>Writing Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineofBusiness__c</fullName>
        <description>Line of business approved for this code.</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__LineofBusiness</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent production code.</description>
        <label>Parent Code</label>
        <referenceTo>vlocity_ins__ProductionCode__c</referenceTo>
        <relationshipLabel>Production Codes</relationshipLabel>
        <relationshipName>Production_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaymentToPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The party that will be paid for producing via this code.</description>
        <label>Payment To</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Production Codes</relationshipLabel>
        <relationshipName>ProductionCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The producer that is granted this code.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Production Codes</relationshipLabel>
        <relationshipName>Production_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Production Code</label>
    <nameField>
        <label>Production Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>